<resources>
    <string name="app_name">PointGame</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">スタンプラリー</string>
    <string name="menu_list_coupon">クーポン一覧</string>
    <string name="menu_get_coupon">獲得クーポン</string>

    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_password">パスワード</string>
    <string name="action_login">Login</string>
</resources>